# docs/swagger.json
@@ -23,6 +23,13 @@
             "post": {
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "chirp",
                         "name": "chirp",
                         "in": "body",
@@ -63,7 +70,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.UserCredentials"
+                            "$ref": "#/definitions/main.LoginCredentials"
                         }
                     }
                 ],
@@ -93,8 +100,19 @@
             "properties": {
                 "body": {
                     "type": "string"
+                }
+            }
+        },
+        "main.LoginCredentials": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
                 },
-                "user_id": {
+                "expires_in_seconds": {
+                    "type": "integer"
+                },
+                "password": {
                     "type": "string"
                 }
             }
